@@ -1,5 +1,5 @@
 <!--#include virtual="/header.html"-->
-<title>The last decade at GUT
+<title>The last decade at GUTenberg
        - TUGboat 43:1 (2022) - TeX Users Group</title>
 </head><body>
 
@@ -9,7 +9,7 @@
 <h1><a href="/TUGboat/tb43-1/">TUGboat 43:1</a> (2022)<br>
 <small>The Communications of the <a href="/">TeX Users Group</a></small></h1>
 
-<p><b>Title</b>: The last decade at GUT</p>
+<p><b>Title</b>: The last decade at GUTenberg</p>
 
 <p><b>Summary</b>:
 response to article by J. Just; background and activities of GUTenberg.</p>
@@ -17,7 +17,7 @@ response to article by J. Just; background and activities of GUTenberg.</p>
 <p><b>Full text of article</b>: <a href="/TUGboat/tb43-1/tb133andre-gut.pdf">publicly available now</a>.</p>
 
 <p><b>Authors</b>:
-<a href="/TUGboat/Contents/listauthor.html#Andre,Jacques">Jacques Andr&#xe9;</a>, <a href="/TUGboat/Contents/listauthor.html#Bideault,Patrick">Patrick Bideault</a>, <a href="/TUGboat/Contents/listauthor.html#Bitouze,Denis">Denis Bitouz&#xe9;</a>, <a href="/TUGboat/Contents/listauthor.html#Bovani,Michel">Michel Bovani</a>, <a href="/TUGboat/Contents/listauthor.html#Bouche,Thierry">Thierry Bouche</a>, <a href="/TUGboat/Contents/listauthor.html#Chupin,Maxime"> Maxime Chupin</a>, <a href="/TUGboat/Contents/listauthor.html#Flipo,Daniel">Daniel Flipo</a>, <a href="/TUGboat/Contents/listauthor.html#Henel,Yvon">Yvon Henel</a></p>
+<a href="/TUGboat/Contents/listauthor.html#Andre,Jacques">Jacques Andr&#xe9;</a>, <a href="/TUGboat/Contents/listauthor.html#Bideault,Patrick">Patrick Bideault</a>, <a href="/TUGboat/Contents/listauthor.html#Bitouze,Denis">Denis Bitouz&#xe9;</a>, <a href="/TUGboat/Contents/listauthor.html#Bovani,Michel">Michel Bovani</a>, <a href="/TUGboat/Contents/listauthor.html#Bouche,Thierry">Thierry Bouche</a>, <a href="/TUGboat/Contents/listauthor.html#Chupin,Maxime">Maxime Chupin</a>, <a href="/TUGboat/Contents/listauthor.html#Flipo,Daniel">Daniel Flipo</a>, <a href="/TUGboat/Contents/listauthor.html#Henel,Yvon">Yvon Henel</a></p>
 
 <p><b>Publication</b>: <a href="/TUGboat/tb43-1/">TUGboat
 volume 43, number 1</a> (2022),
@@ -47,5 +47,5 @@ avoid raising our voices on these pages.)</p>
 <!-- REPLACE-WITH-BIBLIOGRAPHY -->
 
 <hr><small><a href="/TUGboat/">TUGboat</a> 43:1, 2022 (<a href="/TUGboat/tb43-1/">issue 133</a>)
-&nbsp; [generated 2022-05-09]
+&nbsp; [generated 2022-09-12]
 </small><br><!--#include virtual="/footer.html"-->
