@@ -14,8 +14,7 @@
 <p><b>Summary</b>:
 collaborative textbooks and graphics with [<tt>Al</tt>]<tt>DraTex.sty</tt>.</p>
 
-<p><b>Full text of article</b>: <a href="https://tug.org/members/TUGboat/tb43-1/tb133bergmann-diagrams.pdf">available to TUG members</a> (<a href="/join.html">join TUG</a>);
-will be publicly available after the next issue is published.</p>
+<p><b>Full text of article</b>: <a href="/TUGboat/tb43-1/tb133bergmann-diagrams.pdf">publicly available now</a>.</p>
 
 <p><b>Author</b>:
 <a href="/TUGboat/Contents/listauthor.html#Bergmann,Seth">Seth Bergmann</a></p>
@@ -51,9 +50,9 @@ of figures and diagrams are described.</p>
 <li class="tugbbl">A.B. Downey. Python for Software Design: How to Think Like a Computer Scientist. Cambridge University Press, New York, 2009.</li>
 <li class="tugbbl">E.M. Gurari. TeX and LaTeX: Drawing and Literate Programming. McGraw-Hill, New York, 1994.</li>
 <li class="tugbbl">J. Hefferon. Linear Algebra. Orthogonal Publishing, Ann Arbor, MI, 2022. <a href="https://hefferon.net/linearalgebra">hefferon.net/linearalgebra</a></li>
-<li class="tugbbl">J. Hefferon. Theory of Computation. hefferon.net, 2022. <a href="https://hefferon.net/computation">hefferon.net/computation</a></li>
+<li class="tugbbl">J. Hefferon. Theory of Computation. <a href="https://hefferon.net">hefferon.net</a> 2022. <a href="https://hefferon.net/computation">hefferon.net/computation</a></li>
 </ol>
 
 <hr><small><a href="/TUGboat/">TUGboat</a> 43:1, 2022 (<a href="/TUGboat/tb43-1/">issue 133</a>)
-&nbsp; [generated 2022-05-09]
+&nbsp; [generated 2022-09-12]
 </small><br><!--#include virtual="/footer.html"-->
