@@ -14,8 +14,7 @@
 <p><b>Summary</b>:
 automated removal of widow and orphan lines, without stretching, in all Lua formats.</p>
 
-<p><b>Full text of article</b>: <a href="https://tug.org/members/TUGboat/tb43-1/tb133chernoff-widows.pdf">available to TUG members</a> (<a href="/join.html">join TUG</a>);
-will be publicly available after the next issue is published.</p>
+<p><b>Full text of article</b>: <a href="/TUGboat/tb43-1/tb133chernoff-widows.pdf">publicly available now</a>.</p>
 
 <p><b>Author</b>:
 <a href="/TUGboat/Contents/listauthor.html#Chernoff,Max">Max Chernoff</a></p>
@@ -72,5 +71,5 @@ changes are required.</p>
 </ol>
 
 <hr><small><a href="/TUGboat/">TUGboat</a> 43:1, 2022 (<a href="/TUGboat/tb43-1/">issue 133</a>)
-&nbsp; [generated 2022-05-09]
+&nbsp; [generated 2022-09-12]
 </small><br><!--#include virtual="/footer.html"-->
