@@ -14,11 +14,10 @@
 <p><b>Summary</b>:
 new features both for Markdown writers and coders of templates and solutions.</p>
 
-<p><b>Full text of article</b>: <a href="https://tug.org/members/TUGboat/tb43-1/tb133novotny-markdown.pdf">available to TUG members</a> (<a href="/join.html">join TUG</a>);
-will be publicly available after the next issue is published.</p>
+<p><b>Full text of article</b>: <a href="/TUGboat/tb43-1/tb133novotny-markdown.pdf">publicly available now</a>.</p>
 
-<p><b>Author</b>:
-<a href="/TUGboat/Contents/listauthor.html#Novotny,Vit">V&#xed;t Novotn&#xfd;</a></p>
+<p><b>Authors</b>:
+<a href="/TUGboat/Contents/listauthor.html#Novotny,Vit">V&#xed;t Novotn&#xfd;</a>, <a href="/TUGboat/Contents/listauthor.html#Rehak,Dominik">Dominik Reh&#xe1;k</a>, <a href="/TUGboat/Contents/listauthor.html#Hoftich,Michal">Michal Hoftich</a>, <a href="/TUGboat/Contents/listauthor.html#Vrabcova,Tereza">Tereza Vrabcov&#xe1;</a></p>
 
 <p><b>Publication</b>: <a href="/TUGboat/tb43-1/">TUGboat
 volume 43, number 1</a> (2022),
@@ -42,8 +41,8 @@ since, and ideas for the future development of the Markdown package.</p>
 we introduce the new features of Markdown to the two main audiences of
 Markdown:
 <ol>
-<li>[1.] the writers, who type content in Markdown, and
-<li>[2.] the coders, who prepare templates and solutions.
+<li>the writers, who type content in Markdown, and
+<li>the coders, who prepare templates and solutions.
 </ol>
 In Section 3, we discuss ideas for the future to the third audience of
 Markdown: the developers, who alter and further improve the Markdown
@@ -58,5 +57,5 @@ package.</p>
 </ol>
 
 <hr><small><a href="/TUGboat/">TUGboat</a> 43:1, 2022 (<a href="/TUGboat/tb43-1/">issue 133</a>)
-&nbsp; [generated 2022-05-09]
+&nbsp; [generated 2022-09-12]
 </small><br><!--#include virtual="/footer.html"-->
