@@ -14,8 +14,7 @@
 <p><b>Summary</b>:
 glossary definitions in documents; reordering glossary entries in multiple ways.</p>
 
-<p><b>Full text of article</b>: <a href="https://tug.org/members/TUGboat/tb43-1/tb133talbot-bib2gls-reorder.pdf">available to TUG members</a> (<a href="/join.html">join TUG</a>);
-will be publicly available after the next issue is published.</p>
+<p><b>Full text of article</b>: <a href="/TUGboat/tb43-1/tb133talbot-bib2gls-reorder.pdf">publicly available now</a>.</p>
 
 <p><b>Author</b>:
 <a href="/TUGboat/Contents/listauthor.html#Talbot,Nicola">Nicola Talbot</a></p>
@@ -59,5 +58,5 @@ the same set of entries ordered in different ways.</p>
 </ol>
 
 <hr><small><a href="/TUGboat/">TUGboat</a> 43:1, 2022 (<a href="/TUGboat/tb43-1/">issue 133</a>)
-&nbsp; [generated 2022-05-09]
+&nbsp; [generated 2022-09-12]
 </small><br><!--#include virtual="/footer.html"-->
