@@ -14,8 +14,7 @@
 <p><b>Summary</b>:
 require user confirmation on <tt>&#x5c;input</tt> and other operations.</p>
 
-<p><b>Full text of article</b>: <a href="https://tug.org/members/TUGboat/tb43-1/tb133wermuth-trio.pdf">available to TUG members</a> (<a href="/join.html">join TUG</a>);
-will be publicly available after the next issue is published.</p>
+<p><b>Full text of article</b>: <a href="/TUGboat/tb43-1/tb133wermuth-trio.pdf">publicly available now</a>.</p>
 
 <p><b>Author</b>:
 <a href="/TUGboat/Contents/listauthor.html#Wermuth,Udo">Udo Wermuth</a></p>
@@ -68,5 +67,5 @@ should be patient, curious, and courageous.</p>
 </ol>
 
 <hr><small><a href="/TUGboat/">TUGboat</a> 43:1, 2022 (<a href="/TUGboat/tb43-1/">issue 133</a>)
-&nbsp; [generated 2022-05-09]
+&nbsp; [generated 2022-09-12]
 </small><br><!--#include virtual="/footer.html"-->
