@@ -14,8 +14,7 @@
 <p><b>Summary</b>:
 testing, preparing, installing, and uploading releases of packages.</p>
 
-<p><b>Full text of article</b>: <a href="https://tug.org/members/TUGboat/tb43-1/tb133wright-l3build.pdf">available to TUG members</a> (<a href="/join.html">join TUG</a>);
-will be publicly available after the next issue is published.</p>
+<p><b>Full text of article</b>: <a href="/TUGboat/tb43-1/tb133wright-l3build.pdf">publicly available now</a>.</p>
 
 <p><b>Author</b>:
 <a href="/TUGboat/Contents/listauthor.html#Wright,Joseph">Joseph Wright</a></p>
@@ -51,5 +50,5 @@ authors create releases in a quick and reliable manner.</p>
 <!-- REPLACE-WITH-BIBLIOGRAPHY -->
 
 <hr><small><a href="/TUGboat/">TUGboat</a> 43:1, 2022 (<a href="/TUGboat/tb43-1/">issue 133</a>)
-&nbsp; [generated 2022-05-09]
+&nbsp; [generated 2022-09-12]
 </small><br><!--#include virtual="/footer.html"-->
